tests/neg/implicitSearch.check
-- [E172] Type Error: tests/neg/implicitSearch.scala:13:12 -------------------------------------------------------------
13 |    sort(xs)  // error (with a partially constructed implicit argument shown)
   |            ^
   |            No given instance of type Test.Ord[T] was found for parameter o of method listOrd in object Test
-- [E172] Type Error: tests/neg/implicitSearch.scala:15:38 -------------------------------------------------------------
15 |    listOrd(listOrd(implicitly[Ord[T]] /*not found*/)) // error
   |                                      ^
   |           No given instance of type Test.Ord[T] was found for parameter e of method implicitly in object Predef
